# AI_solo_coder_task_B_053

./: CMakeLists.txt  README.md  config.json  docker-compose.yml
backend/algorithms/: crack_propagation.cpp  dem_simulation.cpp  four_point_bending.cpp  stress_analysis.cpp  washburn_model.cpp
backend/include/: alert_manager.h  bayesian_optimization.h  common.h  config.h  config_loader.h  crack_propagation.h  database.h  dem_simulation.h  four_point_bending.h  http_server.h  lockfree_queue.h  logger.h  module_base.h  profinet_parser.h  prometheus_metrics.h  stress_analysis.h  tcp_server.h  washburn_model.h  websocket_server.h
backend/include/modules/: alert_ws_module.h  crack_router_module.h  dem_simulator_module.h  fanout_module.h  fatigue_predictor_module.h  profinet_parser_module.h  stress_analysis_module.h
backend/src/: alert_manager.cpp  database.cpp  database_extensions.cpp  http_server.cpp  main.cpp  profinet_parser.cpp  tcp_server.cpp  websocket_server.cpp
database/: extension_features.sql  init.sql
docker/: Dockerfile.backend  Dockerfile.simulator  nginx.conf
frontend/: index.html
frontend/css/: style.css
frontend/js/: CrackGradient.js  PorcelainModel.js  api-client.js  app.js  crack_lines.js  porcelain-viewer.js  stress-heatmap.js  virtual-repair-tool.js  websocket-client.js
simulator/: main.cpp
tests/: frontend_tests.html  test_api_integration.py  test_four_point_bending.cpp  test_framework.h  test_main.cpp  test_stress_analysis.cpp  test_washburn_model.cpp  virtual_repair_tests.html
